--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+logging.level.web=DEBUG
+server.port=8080
 
+#HTTPS
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:certificate.p12
+server.ssl.key-store-password=dass@995
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_course
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.initialization-mode=always
